# nwg-notifications

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  sonar-project.properties
.github/actions/setup-gtk4/: action.yml
.github/workflows/: audit.yml  clippy.yml  codeql.yml  deny.yml  fmt.yml  test.yml
data/: org.freedesktop.Notifications.service.in  org.nwg.Notifications.service.in
docs/: code-quality-review-post-v0.3.4.md
docs/superpowers/plans/: 2026-04-28-panel-width.md  2026-04-28-pending-count-ipc.md  2026-04-28-popup-position-center.md  2026-04-28-popup-width-and-fdo-fallthrough.md  2026-04-29-live-config-updates.md  2026-04-29-panel-open-dismisses-popups.md  2026-05-03-actionable-update-error.md  2026-05-03-bundle-dbus-refactor-36-41.md  2026-05-03-bundle-docs-sweep-44-45-49.md  2026-05-03-bundle-quick-wins-35-38-43-50-51.md  2026-05-03-bundle-state-refactor-37-39.md  2026-05-03-bundle-test-coverage-46-47-48.md  2026-05-03-bundled-bug-fixes-30-31-32-33.md  2026-05-04-bundle-cleanup-40-42.md  2026-05-04-rename-mac-to-nwg-and-release-040.md  2026-05-05-json-config-implementation.md  2026-07-21-dbus-integration-tests.md
docs/superpowers/specs/: 2026-05-05-json-config-design.md  2026-07-21-dbus-integration-tests-design.md
src/: app.rs  config.rs  config_file.rs  dbus.rs  lib.rs  listeners.rs  main.rs  notification.rs  paths.rs  persistence.rs  state.rs  waybar.rs
src/assets/: notifications.css
src/ui/: constants.rs  css.rs  dnd_menu.rs  icons.rs  mod.rs  notification_row.rs  panel.rs  panel_content.rs  popup.rs  window.rs
tests/: dbus_integration.rs
