[package]
name = "nwg-notifications"
version = "0.6.0"
edition = "2024"
rust-version = "1.97"
license = "MIT"
description = "D-Bus notification daemon + notification center for Hyprland and Sway. Claims org.freedesktop.Notifications, shows popup toasts, and ships a slide-out history panel with Do-Not-Disturb controls and optional waybar integration. Replaces mako; runs standalone."
readme = "README.md"
repository = "https://github.com/jasonherald/nwg-notifications"
keywords = ["hyprland", "sway", "notifications", "wayland", "dbus"]
categories = ["gui", "command-line-utilities"]

[[bin]]
name = "nwg-notifications"
path = "src/main.rs"

[dependencies]
# Shared library
nwg-common = "0.6"

# Atomic file writes for the JSON config (NamedTempFile + persist
# = same-fs tempfile + rename(2), the canonical POSIX atomic write).
tempfile = "3"

# Inotify-based config-file watcher for hot-reload. notify = "8"
# to match nwg-common's pin (cargo MVS dedupes).
notify = "8"

# GTK4 + Wayland layer shell. `gtk4::gio` provides the D-Bus server
# plumbing (bus_own_name, BusType::Session, DBusConnection); no
# separate gio dep needed.
gtk4 = "0.11"
gtk4-layer-shell = "0.8"

# Serialization (notification history persistence JSON, waybar status JSON)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Raw signal numbers (libc::SIGRTMIN/SIGRTMAX) used by waybar.rs.
# nix is no longer a direct dep — nwg-common pulls in the slice it
# needs internally; we never call nix directly from this crate.
libc = "0.2"
